简述：提交代码
背景信息：

修改内容：

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="dialog_window_background">#F6F4F4</color>
+    <color name="white">#FFFFFF</color>
+    <color name="bg_back_gray">#F6F4F4</color>
+    <color name="bg_dark_gray_text">#3F4246</color>
+    <color name="line">#e0e0e0</color>
+    <color name="bg_gray_text">#6A6F75</color>
+    <color name="transparent">#00000000</color>
+    <color name="app_color">#252729</color>
+    <color name="toolbar_home_icon_select">#30000000</color>
+    <color name="app_bar_text_color">#f0f7ff</color>
 </resources>
