--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,19 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <!-- 全屏显示dialog对话框-->
+    <style name="camera_dialog_no_screen">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/dialog_window_background</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
+    <!--拍照对话框进入和退出动画样式 -->
+    <style name="camera_dialog_enter_exit" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/dialog_bottom_rise_enter</item>
+        <item name="android:windowExitAnimation">@anim/dialog_bottom_exit</item>
+    </style>
+
 </resources>
