--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/id_item_image"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginBottom="2dp"
         android:background="@drawable/pictures_no"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"/>
 
     <ImageButton
         android:id="@+id/id_item_select"
-        android:clickable="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -20,6 +21,7 @@
         android:layout_marginRight="3dp"
         android:layout_marginTop="3dp"
         android:background="@null"
-        android:src="@drawable/pictures_selected" />
+        android:clickable="false"
+        android:src="@drawable/picture_unselected"/>
 
 </RelativeLayout>
