--- a/app/src/main/res/layout/list_dir.xml
+++ b/app/src/main/res/layout/list_dir.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#ffffff" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ffffff">
 
-    <ListView
-        android:id="@+id/id_list_dir"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:divider="#EEE3D9"
-        android:dividerHeight="1px" >
-    </ListView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/image_dir_RecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
