--- a/app/src/main/res/layout/list_dir_item.xml
+++ b/app/src/main/res/layout/list_dir_item.xml
@@ -1,54 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="center_vertical"
+              android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/dir_item_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/pic_dir"
-        android:paddingBottom="17dp"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
-        android:paddingTop="9dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_launcher"/>
-
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/dir_item_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/dir_item_image"
+        android:layout_margin="12dp"
+        android:background="@drawable/bg_image_folder">
+
+        <ImageView
+            android:id="@+id/dir_item_image"
+            android:layout_width="78dp"
+            android:layout_height="78dp"
+            android:layout_marginBottom="6dp"
+            android:layout_marginRight="6dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_default_image"/>
+
+    </FrameLayout>
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/dir_item_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/all_picture"
-            android:textSize="10sp"/>
+            android:textColor="#212121"
+            android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/dir_item_count"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="4723张"
-            android:textColor="#444"
-            android:textSize="8sp"/>
+            android:layout_marginTop="4dp"
+            android:text="共0张"
+            android:textColor="#999999"
+            android:textSize="12sp"/>
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="20dp"
-        android:src="@drawable/dir_choose"/>
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/folder_check_image"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="20dp"
+        app:srcCompat="@drawable/ic_vector_check"
+        tools:ignore="VectorDrawableCompat"/>
+</LinearLayout>
