--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="app_color">#252729</color>
     <color name="toolbar_home_icon_select">#30000000</color>
     <color name="app_bar_text_color">#f0f7ff</color>
+    <color name="ip_color_accent">#1AAD19</color>
 </resources>
